--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.12",
+    "chroma-js": "^2.1.2",
     "firebase": "^8.10.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
