--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.16.12",
     "chroma-js": "^2.1.2",
     "firebase": "^8.10.0",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
