--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
+    "immer": "^9.0.6",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
