--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
+    "immer": "^9.0.6",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +25,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
