--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-spring": "^9.2.4",
     "react-step-wizard": "^5.3.9",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
