--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^3.2.3",
     "immer": "^9.0.6",
     "localbase": "^0.7.5",
+    "nanoid": "^3.1.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
