--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-react-app": "^6.0.0",
     "gh-pages": "^3.2.3"
   }
 }
