--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-step-wizard": "^5.3.9",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
